samples/_failures_safe/1761650496_9ebc16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc9a0600.c: In function ‘main’:
./samples/SAFE/__tmp_cc9a0600.c:153:9: error: expected declaration or statement at end of input
  153 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_cc9a0600.c:153:9: error: expected declaration or statement at end of input
